--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1161,7 +1161,7 @@ a {
   transition: all .3s;
   border-bottom: 1px solid transparent;
   background: rgba(0, 0, 0, 0.3);
-  -webkit-backdrop-filter: var(--blur);
+  -webkit-backdrop-filter: blur(25px);
 }
 .cid-s48OLK6784 .navbar:not(.navbar-short) {
   border-bottom: 1px solid #e6e6e6;
