--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,26 @@
 @import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i&display=swap);
 
+div {
+  position: fixed;
+  botton:0px;
+  height: 100px;
+  width: 100px;
+}
 
+div {
+  -webkit-backdrop-filter: blur(13px);
+}
+
+div.outer-blur {
+  background: rgba(0, 0, 0, .7);
+}
+
+
+div.inner {
+  background: rgba(250, 250, 250, .5);
+  top: 50px;
+  left: 50px;
+}
 
 
 
